problema nga ito

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,6 @@
     <string name="admin_settings">ADMIN SETTINGS</string>
     <string name="staff_settings">STAFF SETTINGS</string>
     <string name="reboot">Reboot</string>
+    <string name="view">View</string>
+    <string name="download">Download</string>
 </resources>
