--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,5 @@
     <string name="staff_settings">STAFF SETTINGS</string>
     <string name="reboot">Reboot</string>
     <string name="view">View</string>
-    <string name="download">Download</string>
+    <string name="download">DOWNLOAD</string>
 </resources>
