--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="reboot">Reboot</string>
     <string name="view">View</string>
     <string name="download">DOWNLOAD</string>
+    <string name="email">Email Address</string>
 </resources>
