--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
     <string name="branchnamehint">Branch Name</string>
     <string name="success_msg">Success!</string>
     <string name="error_msg">Failed!</string>
-
+    <string name="snackBarNoNetConnectivity">snack</string>
 
 
     <string-array name="spinnerItems">
