--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,9 @@
         <item>Dry</item>
         <item>Other</item>
     </string-array>
+
+    <string-array name="bypass">
+        <item>Wash</item>
+        <item>Dry</item>
+    </string-array>
 </resources>
